0025161: Exception in draw trying pload ALL (espesially TOPTEST)

Deleted following includes in src/SWDRAW/SWDRAW.cxx :
#include <XSAlgo/XSAlgo.hxx>
#include <XSAlgo/XSAlgo_AlgoContainer.hxx>